--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,3 +40,4 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 html { font-size: 10px; }
+body { outline: 10px solid red !important; }
